--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ GitTutorial/GitTutorial/resource.h
 GitTutorial/GitTutorial/stdafx.cpp
 GitTutorial/GitTutorial/stdafx.h
 GitTutorial/ipch/GITTUTORIAL-d61df7b0/GITTUTORIAL-658c0684.ipch
+GitTutorial/
