--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-GitTutorial/.vs/GitTutorial/v14/.suo
+GitTutorial/GitTutorial/Debug/
 GitTutorial/GitTutorial.VC.db
-GitTutorial/GitTutorial.sln
-GitTutorial/GitTutorial/AssemblyInfo.cpp
-GitTutorial/GitTutorial/Debug/GitTutorial.vcxprojResolveAssemblyReference.cache
-GitTutorial/GitTutorial/GitTutorial.cpp
-GitTutorial/GitTutorial/GitTutorial.vcxproj
-GitTutorial/GitTutorial/GitTutorial.vcxproj.filters
-GitTutorial/GitTutorial/ReadMe.txt
-GitTutorial/GitTutorial/app.ico
-GitTutorial/GitTutorial/app.rc
-GitTutorial/GitTutorial/resource.h
-GitTutorial/GitTutorial/stdafx.cpp
-GitTutorial/GitTutorial/stdafx.h
-GitTutorial/ipch/GITTUTORIAL-d61df7b0/GITTUTORIAL-658c0684.ipch
-GitTutorial/
